examples/datalog/27_atomic_ops/11_batch_insert.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_batch
Knowledge graph 'test_batch' created.
Switched to knowledge graph: test_batch
> .kg use test_batch
Switched to knowledge graph: test_batch
> +items[(1, "a"), (2, "b"), (3, "c"), (4, "d"), (5, "e")].
Inserted 5 fact(s) into 'items'.
> count_items(<COUNT:X>) :- items(X, _).
Script error: Parse error: Unknown aggregate function: 
