examples/datalog/27_atomic_ops/11_batch_insert.dl
% Test: Batch insert operation
% Expected: Insert multiple rows atomically
% Category: 27_atomic_ops
% Priority: P2 - Atomic operations

.kg create test_batch
.kg use test_batch

+items[(1, "a"), (2, "b"), (3, "c"), (4, "d"), (5, "e")].

count_items(<COUNT:X>) :- items(X, _).

?- count_items(N).

.kg use default
.kg drop test_batch
